set up data source for the main table view. make autoresizing cell's height

--- a/QuickNotes/Resources/en.lproj/Localizable.strings
+++ b/QuickNotes/Resources/en.lproj/Localizable.strings
@@ -5,3 +5,5 @@
   Created by Sergey Krotkih on 25/07/2018.
   Copyright © 2018 Sergey Krotkih. All rights reserved.
 */
+
+"Quick Notes" = "Quick Notes";
