--- a/QuickNotes/Resources/ru.lproj/Localizable.strings
+++ b/QuickNotes/Resources/ru.lproj/Localizable.strings
@@ -9,3 +9,5 @@
 "Quick Notes" = "Быстрые заметки";
 "Note" = "Заметка";
 "New Note" = "Новая заметка";
+"You should enter at least one symbol" = "Вы должны ввести хотя бы один символ";
+"The text is too long. Please enter less than 256 symbols" = "Строка слишком длинная! Пожалуйста, введите не более 256 символов.";
